maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:44: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean = {
                       ^Escaper:53: error: identifier expected but '}' found.
}
^